set(FLTK2_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(FLTK2_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib)

add_custom_target(BuildFltk2
    COMMAND make
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    COMMENT "Orginal fltk2 makefile target"
)

add_library(fltk2 STATIC IMPORTED)
target_include_directories(fltk2 INTERFACE
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)